# coins_prices

./: .env_dev  .gitignore  Procfile  makefile  manage.py  pyproject.toml  readme.md  requirements.txt
api/: urls.py  views.py
coins_prices/: asgi.py  config.py  settings.py  urls.py  wsgi.py
docker/: docker-compose.yml
getter_rates/: __init__.py  test.py
main_app/: forms.py  models.py  tests.py  urls.py  utils.py  views.py
main_app/migrations/: 0001_initial.py
main_app/templates/: base.html  index.html
