[tool.poetry]
name = "coins-prices"
version = "0.1.0"
description = ""
authors = ["italojohnny <italojohnnydosanjos@gmail.com>"]
readme = "readme.md"
packages = [{include = "coins_prices"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
requests = "^2.31.0"
pydantic = "1.10.11"
python-dateutil = "^2.8.2"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
